Fix albums spacing but

--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ body {
 .albums {
   grid-column: full-start / full-end;
   display: grid;
-  grid-template-rows: 70vh 70vh repeat(4, 1fr);
+  grid-template-rows: 60vh 50vh repeat(4, 1fr);
   grid-template-columns: 3fr 4fr 3fr;
   position: relative;
   font-weight: 400; }
@@ -299,8 +299,8 @@ body {
 
 .main {
   grid-column: content-start / content-end;
-  padding-bottom: 140vh;
-  margin-bottom: -140vh;
+  padding-bottom: 110vh;
+  margin-bottom: -110vh;
   padding-top: 80vh;
   margin-top: -80vh; }
 
