--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,7 +1,7 @@
 .main {
   grid-column: content-start / content-end;
-  padding-bottom: 140vh;
-  margin-bottom: -140vh;
+  padding-bottom: 110vh;
+  margin-bottom: -110vh;
   padding-top: 80vh;
   margin-top: -80vh;
 }
